--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- <div class = "aboutText"> <h1>About Me</h1></div> -->  
   <div class = "txtContainer">
         <h1>About Me</h1>
-        <div class = "centerThis"><h2>Hello, my name is Samet Cimen, I am 16 years old. I like web development. I am from Turkey. I have 4 friends, Afnan tuna...</h2></div>
+        <div class = "centerThis"><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quod accusamus perspiciatis dolor quidem earum id a quia illo facilis vel, error similique. Ratione voluptas fuga reiciendis iusto, facilis doloremque!</h2></div>
   
         
        </div>
