Before adding coming soon

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         
        </div>
  
-  </div><!-- AboutmeContainer End -->
+  </div><!-- AboutmeContainer End s -->
 </div>
 <div class = "afterHeader">
   <div>
