fixed github holder error on small screens

--- a/index.html
+++ b/index.html
@@ -148,10 +148,12 @@
                   </div>
               </a>
 
+               <a href="https://github.com/SametCimen1/FitnessPro">
                   <div class = "githubHolder">  
                     <img src="img/githubSVG.svg" alt="" class = "carGitHubLogo"> <!-- github img -->
                     <p class = "clone">Repository</p>
                   </div>
+                </a>
              </div>
              <div class = "language">
                <h2>Languages: Java</h2>
