--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name = "viewport" content = "width=device-width, initial-scale=1"> 
-    <title>Document</title>
+    <title>Samet Cimen</title>
     <link rel="stylesheet" href="style.css">
     <script src = "toggle.js" async></script>
     <script src = "main.js" async></script>
     <script src = "rotate.js" async></script>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -18,6 +19,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
+<link rel = "icon" href = "NotramizDayi.png" type = "image/x-icon">
+
 </head>
 <body>
     <main class = "head" role="main"> <!-- Background set to the img -->
@@ -82,7 +86,7 @@
     </div>
              
              <nav class = "navBar">
-              <h1 class = "logo"><a src = "main">S</a></h1>
+              <h1 class = "logo"><a class = "logoLink" src = "main">S</a></h1>
               <a href="#" class = "toggle-button">
                 <span class = "line"></span>
                 <span class = "line"></span>
@@ -169,7 +173,7 @@
                       <img src="img/GameOver.jpg" alt="Game Over image" class = "projectImage fix">
                     </div>
                     <h2>Games</h2>
-                    <h4>The website where I share the games I amde</h4>
+                    <h4>The website where I share the games I made</h4>
                 </div>
                 <div class = "cardGithub"> <!-- Margin auto and width 90%.justify:space between  --> <!-- Border 1px, background:transparent. -->
                     <a href="https://github.com/SametCimen1/games" class = "cardLinks">
