--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
         <div class = "aboutMeContainer"> <!-- set width, container = flex. spacebetween -->
           <img src="img/myImage1.jpg" alt="" class = "myImage">
-          <p class = "myText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A optio, quaerat ratione quia sit rerum deserunt eligendi atque ad velit beatae vel cum nam, neque mollitia cupiditate, facere tempora vitae.</p>
+          <p class = "myText">Hello, my name is Samet Cimen. I like web development and have a great fashion for machine learning. </p>
         </div>
     </div>
     </section>
