--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src = "toggle.js" async></script>
     <script src = "main.js" async></script>
     <script src = "rotate.js" async></script>
+    <meta charset="UTF-8">
     <script src = "animate.js" async></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -126,7 +127,7 @@
         </div>
         <div class = "aboutMeContainer observe"> <!-- set width, container = flex. spacebetween -->
           <img src="img/myImage1.jpg" alt="" class = "myImage   moveDown">
-          <p class = "myText  ">Hello, my name is Samet Cimen. I like web development and have a great fashion for machine learning. </p>
+          <p class = "myText  ">Hello, my name is Samet Cimen. I like web development and have a great fashion for machine learning. I am also lonely, sad and desprerate &#128534</p>
         </div>
     </div>
     </section>
