--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name = "viewport" content = "width=device-width, initial-scale=1"> 
+    <meta
+    name="description"
+    content="Samet Cimen Blog"
+  />
+  <meta
+    property="og:image"
+    content="./NotramizDayi"
+  />
+
+
+
     <title>Samet Cimen</title>
     <link rel="stylesheet" href="style.css">
     <script src = "toggle.js" async></script>
@@ -30,7 +41,7 @@
       <div class = "linkAndText">
         <div class = "textContainer"> 
           <div class = "welcome haedDivs"> <!-- Width 50%, text-align -->
-              <h2 class = "hey">Hey, I am Samet</h2> 
+              <h2 class = "hey">Hey, I am Samet Updated</h2> 
           </div>
 
           <div class = "links haedDivs">
