meta tag didnt work tried again

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   />
   <meta
     property="og:image"
-    content="./NotramizDayi"
+    content="https://i.ytimg.com/vi/hZpdMOMip2E/maxresdefault.jpg"
   />
 
 
@@ -41,7 +41,7 @@
       <div class = "linkAndText">
         <div class = "textContainer"> 
           <div class = "welcome haedDivs"> <!-- Width 50%, text-align -->
-              <h2 class = "hey">Hey, I am Samet Updated</h2> 
+              <h2 class = "hey">Hey, I am Samet Updated2</h2> 
           </div>
 
           <div class = "links haedDivs">
