updated meta :sob:

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name = "viewport" content = "width=device-width, initial-scale=1"> 
-    <meta
-    name="description"
-    content="Samet Cimen Blog"
-  />
+    <meta property="og:description" content="Samet Cimen Blog">
   <meta
     property="og:image"
     content="https://i.ytimg.com/vi/hZpdMOMip2E/maxresdefault.jpg"
+  />
+  <meta
+    property="og:url"
+    content="https://sametcimen1.github.io"
   />
 
 
