--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     property="og:url"
     content="https://sametcimen1.github.io"
   />
+  <meta name="twitter:card" content="summary_large_image">
 
 
 
@@ -42,7 +43,7 @@
       <div class = "linkAndText">
         <div class = "textContainer"> 
           <div class = "welcome haedDivs"> <!-- Width 50%, text-align -->
-              <h2 class = "hey">Hey, I am Samet Updated2</h2> 
+              <h2 class = "hey">Hey, I am Samet Updated3</h2> 
           </div>
 
           <div class = "links haedDivs">
