meta tag update 4

--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name = "viewport" content = "width=device-width, initial-scale=1"> 
-    <meta property="og:description" content="Samet Cimen Blog">
-  <meta
-    property="og:image"
-    content="https://i.ytimg.com/vi/hZpdMOMip2E/maxresdefault.jpg"
-  />
-  <meta
-    property="og:url"
-    content="https://sametcimen1.github.io"
-  />
-  <meta name="twitter:card" content="summary_large_image">
+    
+  
 
 
 
@@ -25,6 +17,16 @@
     <meta charset="UTF-8">
     <script src = "animate.js" async></script>
     
+    <meta property="og:title" content="Samet Cimen" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://sametcimen1.github.io/" />
+<meta property="og:image" content="https://sametcimen1.github.io/img/NotramizDayi.png" />
+<meta property="og:description" content="Samet Cimen Website" />
+<meta name="theme-color" content="#FF0000">
+
+<!-- Include this to make the og:image larger -->
+<meta name="twitter:card" content="summary_large_image">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -43,7 +45,7 @@
       <div class = "linkAndText">
         <div class = "textContainer"> 
           <div class = "welcome haedDivs"> <!-- Width 50%, text-align -->
-              <h2 class = "hey">Hey, I am Samet Updated3</h2> 
+              <h2 class = "hey">Hey, I am Samet Updated4</h2> 
           </div>
 
           <div class = "links haedDivs">
