--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Samet Cimen" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://sametcimen1.github.io/" />
-<meta property="og:image" content="https://sametcimen1.github.io/img/NotramizDayi.png" />
+<meta property="og:image" content="https://i.ytimg.com/vi/hZpdMOMip2E/maxresdefault.jpg" />
 <meta property="og:description" content="Samet Cimen Website" />
 <meta name="theme-color" content="#FF0000">
 
@@ -45,7 +45,7 @@
       <div class = "linkAndText">
         <div class = "textContainer"> 
           <div class = "welcome haedDivs"> <!-- Width 50%, text-align -->
-              <h2 class = "hey">Hey, I am Samet Updated4</h2> 
+              <h2 class = "hey">Hey, I am Samet Updated5</h2> 
           </div>
 
           <div class = "links haedDivs">
