changed img:og to my picture try1

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Samet Cimen" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://sametcimen1.github.io/" />
-<meta property="og:image" content="https://i.ytimg.com/vi/hZpdMOMip2E/maxresdefault.jpg" />
+<meta property="og:image" content="img/background7.JPG" />
 <meta property="og:description" content="Samet Cimen Website" />
 <meta name="theme-color" content="#FF0000">
 
