--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
         <div class = "aboutMeContainer observe"> <!-- set width, container = flex. spacebetween -->
           <img src="img/myImage1.jpg" alt="" class = "myImage   moveDown">
-          <p class = "myText  ">Hello, my name is Samet Cimen. I like web development and have a great fashion for machine learning. React.js enthusiast &#128151 &#128525 </p>
+          <p class = "myText  ">Hello, my name is Samet Cimen. I am 16 years old. I like web development and have a great fashion for machine learning. I work with (HTML, CSS, Python, JavaScript, React and Node.js)  </p>
         </div>
     </div>
     </section>
