updated image of findworkbuddy card

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class = "cardImgAndInfo  observe moveDown" >
                 <div class = "imgContainer"> 
             
-                  <img src="img/aigle.svg" alt="movie  image" class = "projectImage movie fix">
+                  <img src="img/logo.png" alt="findworkbuddy image" class = "projectImage movie fix findworkbuddy">
                 </div>
                 <h2>Find Work Buddy</h2>
                 <h4>Plotform for you to find friends to work with</h4>
