--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
 
 </section>
   -->
+  <!-- 
+    A comment to test the python
+    script
+    changed 5 lines
+   -->
 <section class = "projects" id = "containerProjects">
         <div class = "projectsInfo  observe moveDown">
              <h1>Projects</h1>
