--- a/index.html
+++ b/index.html
@@ -380,6 +380,8 @@
 
     </section>
 
+
+     
     <section class = "getInTouch">
       <div class = "getInTouchInner">
           <h1>Get In Touch</h1>
@@ -389,5 +391,8 @@
         </div>
     </section>
 
+    <section>
+      
+    </section>
 </body>
 </html>
