--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <h1>Mustafa Samet Cimen</h1>
         <p>Full Stack Web Developer</p>
         <div class = "contactInfo">
-          <a><i class="fa-brands fa-github"></i></a>
-          <a><i class="fa-brands fa-instagram"></i></a>
-          <a><i class="fa-brands fa-twitter"></i></a>
+          <a href = "https://github.com/sametcimen1"><i class="fa-brands fa-github"></i></a>
+          <a href = "https://instagram.com/mustafa.samet.cimen1"><i class="fa-brands fa-instagram"></i></a>
+          <a href = "https://twitter.com/samet_Cimen1"><i class="fa-brands fa-twitter"></i></a>
         </div>
       </div>
       <div class = "myPic">
@@ -77,7 +77,7 @@
 
     <div class = "width">
       <h1 class = "align header">About Me!</h1>
-      <p class = " paragraph">Hello!!!! My name is Mustafa Samet Cimen and I am in love with React. I like programming and playing rocket lauge. Aside from this, my favorite show is Mr. Robot. </p>
+      <p class = " paragraph">Hello!!!! My name is Mustafa Samet Cimen. I like programming and web development. I usually use PERN but also love other stacks. In my free time, I usually watch Mr.Robot. Do not hesitate to reach out to me if you have any questions.</p>
     </div>
 
     <div class = "line width">
@@ -87,47 +87,56 @@
     <div class = "width projects">
       <h1 class = "align header">Projects</h1>
       <div class = "projectContainer">
+
+        <a href = "https://github.com/sametcimen1/findworkbuddy"class = "containre">
+          <div class = "card">
+            <div class = "cardImageContainer">
+              <img src = "img/findworkbuddy.png">
+            </div>
+            <div>
+                <p class = "cardHeader">Find Work Buddy</p>
+                <p class = "cardParagraph">Find work buddy was developed to bring people togehere. It used PERN stack</p>
+            </div>
+          </div>
+        </a>  
+
+        <a class = "containre">
         <div class = "card">
           <div class = "cardImageContainer">
-            <img src = "img/findworkbuddy.png">
+            <img src = "img/alan.png">
           </div>
           <div>
-              <p class = "cardHeader">Find Work Buddy</p>
-              <p class = "cardParagraph">Find work buddy was developed to bring people togehere. It used PERN stack</p>
+              <p class = "cardHeader">Alan</p>
+              <p class = "cardParagraph">Alan was made for 2022 FBLA Coding & Programming. I used Electronjs and reacts</p>
           </div>
         </div>
+      </a>
 
+      <a href = "http://happyjackharvestcamp.live/" class = "containre">
         <div class = "card">
           <div class = "cardImageContainer">
-            <img src = "img/findworkbuddy.png">
+            <img src = "img/harvest.png">
           </div>
           <div>
-              <p class = "cardHeader">Find Work Buddy</p>
-              <p class = "cardParagraph">Find work buddy was developed to bring people togehere. It used PERN stack</p>
+              <p class = "cardHeader">Happ Jack Harvest Camp</p>
+              <p class = "cardParagraph">Designed for an English project. Used HTML, SCSS, and JavaScript</p>
           </div>
         </div>
+      </a>
 
+      <a href = "https://aigle-24lqe3nn8-sametcimen1.vercel.app/" class = "containre">
         <div class = "card">
           <div class = "cardImageContainer">
-            <img src = "img/findworkbuddy.png">
+            <img src = "img/aigle.png">
           </div>
           <div>
-              <p class = "cardHeader">Find Work Buddy</p>
-              <p class = "cardParagraph">Find work buddy was developed to bring people togehere. It used PERN stack</p>
-          </div>
-        </div>
-
-        <div class = "card">
-          <div class = "cardImageContainer">
-            <img src = "img/findworkbuddy.png">
-          </div>
-          <div>
-              <p class = "cardHeader">Find Work Buddy</p>
-              <p class = "cardParagraph">Find work buddy was developed to bring people togehere. It used PERN stack</p>
+              <p class = "cardHeader">Aigle</p>
+              <p class = "cardParagraph">First social network application I created. Used Next.js, React and MangoDB</p>
           </div>
         </div>
       </div>
     </div>
+  </a>
 
 
     <div class = "width tech">
@@ -140,42 +149,46 @@
         </div>
 
         <div class = "techCard">
-          <img src = "img/react.png">
-          <p class = "techHeader">React</p>
+          <img src = "img/html.png">
+          <p class = "techHeader">Html</p>
         </div>
 
 
         <div class = "techCard">
-          <img src = "img/react.png">
-          <p class = "techHeader">React</p>
+          <img src = "img/js.png">
+          <p class = "techHeader">JavaScript</p>
         </div>
 
         <div class = "techCard">
-          <img src = "img/react.png">
-          <p class = "techHeader">React</p>
+          <img src = "img/tailwind.png">
+          <p class = "techHeader">Tailwind</p>
         </div>
 
         <div class = "techCard">
-          <img src = "img/react.png">
-          <p class = "techHeader">React</p>
+          <img src = "img/python.png">
+          <p class = "techHeader">Python</p>
         </div>
 
         <div class = "techCard">
-          <img src = "img/react.png">
-          <p class = "techHeader">React</p>
+          <img src = "img/psql.png">
+          <p class = "techHeader">postgreSQL</p>
         </div>
 
         <div class = "techCard">
-          <img src = "img/react.png">
-          <p class = "techHeader">React</p>
+          <img src = "img/mango.png">
+          <p class = "techHeader">MangoDB</p>
         </div>
 
       </div>
     </div>
 
-    <div class = "width contact">
-      <h1 class = "header align">Contact Me!</h1>
-      <p class = "paragraph align">Do not hesitate to reach out to me! <a href = "mailto:cimensamet338@gmail.com"></a>my email</p>
-    </div>
+    <section class = "getInTouch">
+      <div class = "getInTouchInner">
+          <h1>Get In Touch</h1>
+          <p> If you have any questions, feel free to reach me out here,<a href="mailto:cimensamet338@gmail"> cimensamet338@gmail.com. </a></p>
+          
+          <p class = "madeWith"></p>
+        </div>
+    </section>
 </body>
 </html>
