--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 
     <div class = "width tech">
-      <h1 class = "align header">Technoligies I know</h1>
+      <h1 class = "align header">technologies I know</h1>
       <div class = "techContainer">
         
         <div class = "techCard">
