--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/reactlogo.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -212,7 +212,7 @@
                 <h4 class="h4 service-item-title">Web design</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Modern and high-quality design made at a professional level.
                 </p>
               </div>
 
@@ -228,7 +228,7 @@
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  High-quality development of sites in HTML, CSS and React, Next.js.
                 </p>
               </div>
 
@@ -246,7 +246,7 @@
                 <h4 class="h4 service-item-title">Python</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  I write python scripts to help automate stuff.
                 </p>
               </div>
 
@@ -637,19 +637,59 @@
 
         
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a target = "_blank" href ="https://youtube.com">
+              <a target = "_blank" href ="https://sametcimen1.github.io/halloween">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/web1.jpg" alt="arrival" loading="lazy">
+                  <img src="./assets/images/project1.png" alt="arrival" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Arrival</h3>
+                <h3 class="project-title">Halloween</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Web development [Clone]</p>
+
+              </a>
+            </li>
+
+
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a target = "_blank" href ="https://sametcimen1.github.io/plant">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project2.png" alt="arrival" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Plantex</h3>
+
+                <p class="project-category">Web development [Clone]</p>
+
+              </a>
+            </li>
+
+
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a target = "_blank" href ="https://stav.vercel.app">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project3.png" alt="arrival" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Stav</h3>
+
+                <p class="project-category">Web development [React]</p>
 
               </a>
             </li>
