--- a/index.html
+++ b/index.html
@@ -690,6 +690,26 @@
             </li>
 
 
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a target = "_blank" href ="https://sametcimen1.github.io/shorter">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project4.png" alt="arrival" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Shorter</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+
           </ul>
 
         </section>
